# rppico_webserver

./: CMakeLists.txt  README.md  colorpicker.html  conv.py  files.h  main.c
websites/: colorok.html  colorpicker.html  conv.py  indexpage.html  notfound.html  websites.h
